
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int rcvbuf ;
typedef int dbuf ;
struct TYPE_3__ {char* next_in; int avail_in; char* next_out; int avail_out; } ;


 int ERR_INFLATE ;
 int ERR_READSOCK ;
 int QUIT (int ) ;


 int Z_PARTIAL_FLUSH ;
 int free (char*) ;
 int inflate (TYPE_1__*,int ) ;
 int memcpy (int ,char*,int) ;
 int read_sock (char*,int) ;
 char* realloc (char*,int) ;
 TYPE_1__ zin ;

int zgetch(void)
{
    static char * outbuf = ((void*)0);
    static int outpos = 0, outlen = 0;
    static char rcvbuf[32768];
    static char dbuf[4096];
    int got;

  retry:
    if (outpos < outlen && outlen)
        return outbuf[outpos++];
    free(outbuf);
    outlen = 0;
    outbuf = ((void*)0);
    got = read_sock(rcvbuf, sizeof(rcvbuf));
    if (got <= 0)
        QUIT(ERR_READSOCK);
    zin.next_in = rcvbuf;
    zin.avail_in = got;
    while (1)
        {
            int status, dlen;

            zin.next_out = dbuf;
            zin.avail_out = sizeof(dbuf);
            status = inflate(&zin, Z_PARTIAL_FLUSH);
            switch (status)
                {
                case 128:
                    outpos = 0;
                    dlen = sizeof(dbuf) - zin.avail_out;
                    outlen += dlen;
                    outbuf = realloc(outbuf, outlen);
                    memcpy(outbuf + outlen - dlen, dbuf, dlen);
                    break;
                case 129:
                    goto retry;
                default:
                    QUIT(ERR_INFLATE);
                }
        }
}
